--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "dependencies": {
     "antd": "^3.5.1",
+    "npm": "^6.0.1",
     "react": "^16.3.2",
     "react-burgers": "^1.0.4",
     "react-dom": "^16.3.2",
+    "react-redux": "^5.0.7",
     "react-scripts": "1.1.4",
+    "redux": "^4.0.0",
     "semantic-ui-css": "^2.3.1",
     "semantic-ui-react": "^0.80.0"
   },
